--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -202,29 +202,40 @@ body {
   margin: 0 auto;
 }
 
+
 .authentication__message {
   position: fixed;
   top: 20px;
-  left: 0;
-  min-height: 45px;
-  background-color: #ffffff;
-  padding: 10px 20px 10px 30px;
-  transform: translateX(-100%);
-  transition: transform 0.4s ease;
+  left: 20px;
+  padding: 12px 16px;
+  border-radius: 6px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  min-height: 20px;
+  transform: translateX(-300%);
+  transition: all 0.3s ease;
+  background-color: #e0e0dd;
 
   &::before {
     position: absolute;
     content: '';
     left: 0;
     top: 0;
+    width: 4px;
     height: 100%;
-    width: 10px;
     background-color: #FF4B2B;
   }
 }
 
 .authentication__message.is-visible {
   transform: translateX(0);
+}
+
+.authentication__message--error {
+  &::before {
+    background-color: darkred;
+  }
 }
 
 .authentication__title {
@@ -315,4 +326,10 @@ body {
   .authentication__authorization {
     width: auto;
   }
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
 }
